@@ -12389,6 +12389,7 @@ D       cat_vol_calc_roi.m
 (6) Removed: cat_vol_calc_roi.m
 
 ------------------------------------------------------------------------
+r1029 | dahnke | 2016-10-05 16:57:30 +0200 (Mi, 05 Okt 2016) | 23 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -12412,5 +12413,14 @@ M       templates_1.50mm/cat.nii
 (4) Changed:  Added 3 comments in "cat_FAQ.html" for blurred sulci/gyri and
               unsolved problems in 7 Tesla images with strong inhomogeneities.
 
+
 ------------------------------------------------------------------------
-r1029 | dahnke | 2016-10-05 16:57:15
+
+Changed paths:
+M       CHANGES.txt
+A       cat_vol_iscaling.m
+
+(1) New:   Addend forgotten "cat_vol_iscaling".  
+
+------------------------------------------------------------------------
+r1030 | dahnke | 2016-10-05 17:37:27
